--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [metadata]
-name = MolSym
-version = 0.2.1
+name = "MolSym"
+version = "0.2.1"
 authors = [
     "Stephen Goodlett <smg13363@uga.edu>",
     "Nate Kitzmiller <nathaniel.kitzmiller@uga.edu>",
     ]
-description = A program for molecular symmetry detection and SALC construction
-long_description = file: README.md
+description = "A program for molecular symmetry detection and SALC construction"
+long_description = "file: README.md"
 license = "MIT"
 classifiers =
     Programming Language :: Python :: 3
