--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,12 @@ description = "A program for molecular symmetry detection and SALC construction"
 long_description = "file: README.md"
 license = "MIT"
 classifiers =
-    Programming Language :: Python :: 3
-
+    "Programming Language :: Python :: 3"
+readme = "README.md"
+requires-python = ">=3.9"
 [options]
 install_requires =
-    numpy >= 1.23.4
-    psi4 >= 1.6.1
+    "numpy >= 1.23.4"
+    "psi4 >= 1.6.1"
 
 
