--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 [options]
 install_requires = [
-    "numpy >= 1.23.4"
+    "numpy >= 1.23.4",
     "psi4 >= 1.6.1"
     ]
 
