--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Test with pytest
       run: |
         conda install pytest
-        pytest
+        pytest --cov .
     - name: Generate Report
       run: |
         pip install coverage
