--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,31 +3,35 @@ on: [push, pull_request]
 jobs:
   run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        cfg:
+          - conda-env: base
+            python-version: 3.8
+          - conda-env: base
+            python-version: 3.9
+          - conda-env: base
+            python-version: "3.10"
     env:
-      OS: ubuntu-latest
-      PYTHON: '3.9'
+      PYVER: ${{ matrix.cfg.python-version }}
+      CONDA_ENV: ${{ matrix.cfg.conda-env }}
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: ‘2’
-
-    - name: Setup Python
-      uses: actions/setup-python@master
+    
+    - name: Create Environment
+      uses: conda-incubator/setup-miniconda@v2
       with:
-        python-version: 3.9
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install dependencies
-      shell: bash -l {0}
-      run: |
-        conda install python=3.9
-        conda install numpy
-        conda install psi4 python=3.9 -c psi4
-        pip install -e .    
-    - name: Install requirements
-      run: pip install -r requirements.txt
+        installer-url: https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+        activate-environment: test
+        environment-file: devtools/conda-envs/${{ matrix.cfg.conda-env }}.yaml
+        python-version: ${{ matrix.cfg.python-version }}
+        auto-activate-base: false
+    - name: Install
+      shell: bash
+      run: | # Install molsym
+        python -m pip install . --no-deps
     - name: Test with pytest
       run: |
         conda install pytest
