--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,6 +32,7 @@ jobs:
         python -m pip install . --no-deps
     - name: Test with pytest
       run: |
+      shell: bash -l {0}
         pytest --cov="molsym" --color=yes --cov-report=xml test/
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v2
