--- a/base.yaml
+++ b/base.yaml
@@ -1,13 +1,13 @@
 name: test
 channels:
   - defaults
-  - psi4
+  #- psi4
 dependencies:
     # Base
   - numpy
   - python
   - qcelemental
-  - psi4
+  #- psi4
   - pytest
   - pytest-cov
   - coverage
