--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,7 +13,8 @@ build:
   # nodejs: "20"
   # rust: "1.70"
   # golang: "1.20"
-
+conda:
+  environment: environment.yml
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/conf.py
