--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,6 +12,12 @@ jobs:
             python-version: 3.9
           - conda-env: base
             python-version: "3.10"
+          - conda-env: base
+            python-version: "3.11"
+          - conda-env: base
+            python-version: "3.12"
+          - conda-env: base
+            python-version: "3.13"
     env:
       PYVER: ${{ matrix.cfg.python-version }}
       CONDA_ENV: ${{ matrix.cfg.conda-env }}
